# social-data-api

./: .env.example  .gitignore  Cargo.toml  Dockerfile  README.md  docker-compose.Development.yml
migrations/2023-04-19-074750_instagram_create_users/: down.sql  up.sql
migrations/2023-04-20-085939_instagram_create_hist_data/: down.sql  up.sql
src/: api.rs  db.rs  main.rs  models.rs  schema.rs  update.rs
src/_healthcheck/: main.rs
src/api/: gql.rs  server.rs
src/update/: check.rs  web.rs
