[package]
name = "instagram-api"
version = "0.1.0"
authors = ["UpcraftLP"]
edition = "2021"
default-run = "instagram-checker"
build = "build.rs"

[[bin]]
name = "instagram-checker"
path = "src/main.rs"

[[bin]]
name = "healthcheck"
path = "src/_healthcheck/main.rs"


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-graphql = { version = "5.0.7", features = ["uuid", "chrono"] }
async-graphql-warp = "5.0.7"
chrono = "0.4.24"
diesel = { version = "2.0.4", features = ["postgres", "uuid", "r2d2", "chrono"] }
diesel_migrations = { version = "2.0.0", features = ["postgres"] }
dotenvy = "0.15.7"
r2d2 = "0.8.10"
regex = "1.7.3"
reqwest = "0.11.16"
serde = "1.0.160"
serde_json = "1.0.96"
thiserror = "1.0.40"
tokio = { version = "1.27.0", features = ["full", "time"] }
uuid = "1.3.1"
warp = "0.3.4"
